--- a/Templates/index.html
+++ b/Templates/index.html
@@ -26,7 +26,7 @@
 
     <script src="main.js"></script>
 </head>
-<body>
+<body background="imagenes/depositphotos_227620074-stock-illustration-abstract-geometric-white-gray-color.jpg">
     <nav class="light-blue lighten-1" role="navigation">
         <div class="nav-wrapper container">
             <a id="logo-container" href="index.html" class="brand-logo center">Inicio</a>
@@ -45,8 +45,5 @@
         </div>
     </div>
     </section>
-
-    
-
 </body>
 </html>
