Se termino la base de las teorias con triangulo y se modifico el css para cumplir los requerimientos

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -4,12 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <style>
-        div{
-            margin: 10px;
-            padding: 5px 30px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -32,9 +27,12 @@
             <a id="logo-container" href="index.html" class="brand-logo center">Inicio</a>
         </div>
     </nav>
+    <header>
+        <h1 id="mainTitulo">Calculo de Superficies</h1>
+    </header>
     <section>
     <div class="container">
-        <h1 class="header center orange-text">Calculo de Superficies</h1>
+        
         <div class="row center">
             <a href="triangulo.html" class="btn-large waves-effect waves-light orange">Triangulo</a>
             <a href="cuadrado.html" class="btn-large waves-effect waves-light orange">Cuadrado</a>
