--- a/Templates/triangulo.html
+++ b/Templates/triangulo.html
@@ -4,12 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <style>
-        div{
-            margin: 10px;
-            padding: 5px 30px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -33,9 +28,9 @@
         </div>
     </nav>
     <section>
-    <div class="container">
-        <h1 class="header center orange-text">Triangulo</h1>
-    </div>
+    <header>
+            <h1 id="mainTitulo">Triangulo</h1>
+        </header>
     <div>
         <h5 class="header center black-text">Formula: Base.Altura/2</h5>
     </div>
