--- a/Templates/ttriangulo.html
+++ b/Templates/ttriangulo.html
@@ -4,19 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <style>
-        div{
-            margin: 10px;
-            padding: 5px 30px;
-        }
-        .card {
-            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-            transition: 0.3s;
-            width: 40%;
-            text-align: center;
-            left: 30%;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -36,17 +24,18 @@
 <body background="imagenes/depositphotos_227620074-stock-illustration-abstract-geometric-white-gray-color.jpg">
     <nav class="light-blue lighten-1" role="navigation">
         <div class="nav-wrapper container">
+            <a href="triangulo.html" class="brand-logo"><i class="material-icons">arrow_back</i></a>
             <a id="logo-container" href="index.html" class="brand-logo center">Inicio</a>
         </div>
     </nav>
     <section>
         <div class="row center">
-        <div class="container">
-            <h1 class="header center orange-text">Teoria de los triangulos</h1>
-        </div>
+                <header>
+                    <h1 id="mainTitulo">Teoria de los Triangulos</h1>
+                </header>
         <div class="card center">
             <div class="card-image waves-effect waves-block waves-light">
-              <img class="activator" src="imagenes/triangulo.jpg" style="width: 35%; height: 35%;">
+              <img class="activator" src="imagenes/triangulo.jpg" style="width: 35%; height: 35%; align-items: center">
             </div>
             <div class="card-content">
               <span class="card-title activator grey-text text-darken-4">El triángulo es un polígono de tres lados y tres ángulos.<i class="material-icons right">more_vert</i></span>
@@ -57,6 +46,11 @@
                  Los puntos comunes a cada par de lados se denominan vértices del triángulo.</p>
             </div>
           </div>
+        </div>
+    </section>
+    <section>
+        <div class="row center">
+            <a href="https://es.wikipedia.org/wiki/Tri%C3%A1ngulo#Clasificaci%C3%B3n_de_los_tri%C3%A1ngulos" class="waves-effect waves-teal btn-flat"> Clasificacion de los Triangulos</a>
         </div>
     </section>
 </body>
