--- a/Templates/index.html
+++ b/Templates/index.html
@@ -24,7 +24,7 @@
 <body background="imagenes/depositphotos_227620074-stock-illustration-abstract-geometric-white-gray-color.jpg">
     <nav class="light-blue lighten-1" role="navigation">
         <div class="nav-wrapper container">
-            <a id="logo-container" href="index.html" class="brand-logo center">Inicio</a>
+            <a id="logo-container" href="index.html" class="brand-logo center"><i class="material-icons">home</i>Inicio</a>
         </div>
     </nav>
     <header>
@@ -32,7 +32,6 @@
     </header>
     <section>
     <div class="container">
-        
         <div class="row center">
             <a href="triangulo.html" class="btn-large waves-effect waves-light orange">Triangulo</a>
             <a href="cuadrado.html" class="btn-large waves-effect waves-light orange">Cuadrado</a>
