--- a/Templates/ttriangulo.html
+++ b/Templates/ttriangulo.html
@@ -25,7 +25,7 @@
     <nav class="light-blue lighten-1" role="navigation">
         <div class="nav-wrapper container">
             <a href="triangulo.html" class="brand-logo"><i class="material-icons">arrow_back</i></a>
-            <a id="logo-container" href="index.html" class="brand-logo center">Inicio</a>
+            <a id="logo-container" href="index.html" class="brand-logo center"><i class="material-icons">home</i>Inicio</a>
         </div>
     </nav>
     <section>
