Se creo un footer y se agrego el icono a la web

--- a/Templates/style.css
+++ b/Templates/style.css
@@ -20,4 +20,13 @@ img{
     width: auto;
     margin: auto;
     display: block;
-} 
+}
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+  }
+
+  main {
+    flex: 1 0 auto;
+  }
