--- a/Templates/triangulo.html
+++ b/Templates/triangulo.html
@@ -3,19 +3,14 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
+    <link rel="icon" href="imagenes/iconpage.png">
     <link rel="stylesheet" href="style.css">
-
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
     <title> Calculadora de Superficies</title>
-    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 
@@ -68,5 +63,22 @@
         </div>
         </div>
     </section>
+    <footer class="page-footer orange">
+        <div class="container">
+          <div class="row">
+            <div class="col l6 s12">
+              <p class="grey-text text-lighten-4">Proyecto de Laboratorio de Computacion II de Matias Boldini</p>
+              <p><a class="white-text" href="https://github.com/MatiasBoldini">MatÍas Boldini</a></p>
+            </div>
+            <div class="col l3 s12">
+              <h5 class="white-text">Profesores</h5>
+              <ul>
+                <li><a class="white-text" href="https://github.com/edme88">Agustina Edmé Aliciardi</a></li>
+                <li><a class="white-text" href="https://github.com/rmarku">Martín Ricardo Marcucci</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </footer>
 </body>
 </html>
