Se agrego rectangulo y sus respectivos htmls, se hizo una correccion en una variable para el resultado de algunas opearciones en circulos y cuadrados

--- a/Templates/circulo.html
+++ b/Templates/circulo.html
@@ -51,8 +51,8 @@
         </div>
         <div class="row center">
             Resultado=
-        <div id="STriangulo" class="input-field inline">
-            <input id="STriangulo" class="validate"> Metros Cuadrados
+        <div id="SCirculo" class="input-field inline">
+            <input id="SCirculo" class="validate"> Metros Cuadrados
         </div>
         </div>
     </section>
