--- a/Templates/cuadrado.html
+++ b/Templates/cuadrado.html
@@ -51,8 +51,8 @@
         </div>
         <div class="row center">
             Resultado=
-        <div id="STriangulo" class="input-field inline">
-            <input id="STriangulo" class="validate"> Metros Cuadrados
+        <div id="SCuadrado" class="input-field inline">
+            <input id="SCuadrado" class="validate"> Metros Cuadrados
         </div>
         </div>
     </section>
