--- a/Templates/trectangulo.html
+++ b/Templates/trectangulo.html
@@ -3,12 +3,66 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="imagenes/iconpage.png">
+    <link rel="stylesheet" href="style.css">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <title> Calculadora de Superficies</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="main.js"></script>
 </head>
-<body>
-    
+<body background="imagenes/depositphotos_227620074-stock-illustration-abstract-geometric-white-gray-color.jpg">
+    <nav class="light-blue lighten-1" role="navigation">
+        <div class="nav-wrapper container">
+            <a href="rectangulo.html" class="brand-logo"><i class="material-icons">arrow_back</i></a>
+            <a id="logo-container" href="index.html" class="brand-logo center"><i class="material-icons">home</i>Inicio</a>
+        </div>
+    </nav>
+    <section>
+        <div class="row center">
+                <header>
+                    <h1 id="mainTitulo">Teoria de los Rectangulos</h1>
+                </header>
+        <div class="card center">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img class="activator" src="imagenes/rectangulo.jpg" style="width: 35%; height: 35%; align-items: center">
+            </div>
+            <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">Rectángulo, con sus lados paralelos e iguales dos a dos y sus cuatro ángulos rectos<i class="material-icons right">more_vert</i></span>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Definicion<i class="material-icons right">close</i></span>
+              <p>Un rectángulo es una figura geométrica que posee cuatro ángulos interiores de 90º
+                  . Es un paralelogramo, es decir, todos sus lados son paralelos dos a dos.</p>
+            </div>
+          </div>
+        </div>
+    </section>
+    <section>
+        <div class="row center">
+            <a href="https://es.wikipedia.org/wiki/Rect%C3%A1ngulo#Propiedades" class="waves-effect waves-teal btn-flat">Propiedades de los Rectangulos</a>
+        </div>
+    </section>
+    <footer class="page-footer orange">
+        <div class="container">
+          <div class="row">
+            <div class="col l6 s12">
+              <p class="grey-text text-lighten-4">Proyecto de Laboratorio de Computacion II de Matias Boldini</p>
+              <p><a class="white-text" href="https://github.com/MatiasBoldini">MatÍas Boldini</a></p>
+            </div>
+            <div class="col l3 s12">
+              <h5 class="white-text">Profesores</h5>
+              <ul>
+                <li><a class="white-text" href="https://github.com/edme88">Agustina Edmé Aliciardi</a></li>
+                <li><a class="white-text" href="https://github.com/rmarku">Martín Ricardo Marcucci</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </footer>
 </body>
 </html>
