--- a/Templates/index.html
+++ b/Templates/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="main.js"></script>
 </head>
-<body background="imagenes/depositphotos_227620074-stock-illustration-abstract-geometric-white-gray-color.jpg">
+<body>
     <nav class="light-blue lighten-1" role="navigation">
         <div class="nav-wrapper container">
             <a id="logo-container" href="index.html" class="brand-logo center"><i class="material-icons">home</i>Inicio</a>
@@ -44,7 +44,7 @@
               <p><a class="white-text" href="https://github.com/MatiasBoldini">MatÍas Boldini</a></p>
             </div>
             <div class="col l3 s12">
-              <h5 class="white-text">Profesores</h5>
+              <h5 id="titFooter">Profesores</h5>
               <ul>
                 <li><a class="white-text" href="https://github.com/edme88">Agustina Edmé Aliciardi</a></li>
                 <li><a class="white-text" href="https://github.com/rmarku">Martín Ricardo Marcucci</a></li>
