Correccion de ID Univocos en total de la superficie

--- a/Templates/circulo.html
+++ b/Templates/circulo.html
@@ -52,7 +52,7 @@
         <div class="row center">
             Resultado=
         <div id="SCirculo" class="input-field inline">
-            <input id="SCirculo" class="validate"> Metros Cuadrados
+            <input id="SCirculoInput" class="validate"> Metros Cuadrados
         </div>
         <div>
             <h6>Grafico del Triangulo</h6>
