--- a/Templates/cuadrado.html
+++ b/Templates/cuadrado.html
@@ -52,7 +52,7 @@
         <div class="row center">
             Resultado=
         <div id="SCuadrado" class="input-field inline">
-            <input id="SCuadrado" class="validate"> Metros Cuadrados
+            <input id="SCuadradoInput" class="validate"> Metros Cuadrados
         </div>
         <div>
             <h6>Grafico del Cuadrado</h6>
