--- a/Templates/rectangulo.html
+++ b/Templates/rectangulo.html
@@ -59,7 +59,7 @@
         <div class="row center">
             Resultado=
         <div id="SRectangulo" class="input-field inline">
-            <input id="SRectangulo" class="validate"> Metros Cuadrados
+            <input id="SRectanguloInput" class="validate"> Metros Cuadrados
         </div>
         <div>
             <h6>Grafico del Triangulo</h6>
