--- a/Templates/triangulo.html
+++ b/Templates/triangulo.html
@@ -59,7 +59,7 @@
         <div class="row center">
             Resultado=
         <div id="STriangulo" class="input-field inline">
-            <input id="STriangulo" class="validate"> Metros Cuadrados
+            <input id="STrianguloInput" class="validate"> Metros Cuadrados
         </div>
         <div>
             <h6>Grafico del Triangulo</h6>
