Correccion de los label de algunos input

--- a/Templates/circulo.html
+++ b/Templates/circulo.html
@@ -36,7 +36,7 @@
         <div class="row center">
             <div class="input-field inline">
                 <input id="Valr_L" type="number" class="validate">
-                <label for="Valor_L">Radio</label>
+                <label>Radio</label>
                 Unidad en Metros
         </div>    
     </section>
