--- a/Templates/cuadrado.html
+++ b/Templates/cuadrado.html
@@ -35,8 +35,8 @@
     <section>
         <div class="row center">
             <div class="input-field inline">
-                <input id="Valr_L" type="number" class="validate">
-                <label for="Valor_L">Lado</label>
+                <input id="Valor_L" type="number" class="validate">
+                <label >Lado</label>
                 Unidad en Metros
         </div>    
     </section>
