--- a/Templates/rectangulo.html
+++ b/Templates/rectangulo.html
@@ -37,12 +37,12 @@
             <div class="row center">
                 <div class="input-field inline">
                     <input id="Valor_1" type="number" class="validate">
-                    <label for="Valor_1">Base</label>
+                    <label>Base</label>
                     Unidad en Metros
                 </div>
                 <div class="input-field inline">
                     <input id="Valor_2" type="number" class="validate">
-                    <label for="Valor_2">Altura</label>
+                    <label>Altura</label>
                     Unidad en Metros
                 </div>
                 </div>         
