--- a/Templates/cuadrado.html
+++ b/Templates/cuadrado.html
@@ -57,7 +57,7 @@
         <div>
             <h6>Grafico del Cuadrado</h6>
         </div>
-        <canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;">
+        <canvas id="myCanvas">
         </canvas>
         </div>
     </section>
