--- a/Templates/triangulo.html
+++ b/Templates/triangulo.html
@@ -64,7 +64,7 @@
         <div>
             <h6>Grafico del Triangulo</h6>
         </div>
-        <canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;">
+        <canvas id="myCanvas">
         </canvas>
         </div>
     </section>
