--- a/Templates/style.css
+++ b/Templates/style.css
@@ -21,19 +21,11 @@ img{
     margin: auto;
     display: block;
 }
-body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-  }
 main {
     flex: 1 0 auto;
   }
 footer{
     background-color: orange;
-}
-body{
-    background-image: url(imagenes/depositphotos_227620074-stock-illustration-abstract-geometric-white-gray-color.jpg)
 }
 #titSup{
     color: black;
@@ -53,3 +45,6 @@ canvas{
     width: 200;
     height: 100;
 }
+.parallax-container {
+    height: 400px;
+  }  
