--- a/Templates/main.html
+++ b/Templates/main.html
@@ -8,12 +8,12 @@
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!-- Compiled and minified JavaScript -->
+    <script type="text/javascript" src="js/misFunciones.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <title> Calculadora de Superficies</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script type="text/javascript" src="js/misFunciones.js"></script>
 </head>
 <body>
     <nav class="light-blue lighten-1" role="navigation">
@@ -21,24 +21,26 @@
             <a id="logo-container" href="index.html" class="brand-logo center"><i class="material-icons">home</i>Inicio</a>
         </div>
     </nav>
-    <div class="parallax-container center valign-wrapper">
-        <div class="container">
-            <div class="row">
-            <div class="col s12 white-text">
-                <h2 class="teal-text teal-text lighten-2">Calculadora de Superficies y Volumenes</h2>
-                <p>Un programa diseñado para calcular la superficie y volumenes de distintas
-                    figuras geometricas.
-                </p>
-                <a href="index.html" class="waves-effect waves-light btn-large teal lighten-2">Superficies</a>
-                <a href="" class="waves-effect waves-light btn-large teal lighten-2">Volúmenes</a>
+    <section>
+        <div class="parallax-container center valign-wrapper">
+            <div class="container">
+                <div class="row">
+                <div class="col s12 white-text">
+                    <h2 class="teal-text teal-text lighten-2">Calculadora de Superficies y Volumenes</h2>
+                    <p>Un programa diseñado para calcular la superficie y volumenes de distintas
+                        figuras geometricas.
+                    </p>
+                    <a href="index.html" class="waves-effect waves-light btn-large teal lighten-2">Superficies</a>
+                    <a href="" class="waves-effect waves-light btn-large teal lighten-2">Volúmenes</a>
+                </div>
+                </div>
             </div>
+            
+            <div class="parallax">
+                <img src="fondoparallax.jpeg">
             </div>
         </div>
-        
-        <div class="parallax">
-            <img src="imagenes/fondoparallax.jpeg">
-        </div>
-    </div>
+    </section>
     <footer class="page-footer orange">
             <div class="container">
             <div class="row">
