Se modifico algunos puntos del css agregando 2 ids nuevas y adaptando los html

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" href="imagenes/iconpage.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!-- Compiled and minified JavaScript -->
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script type="text/javascript" src="misFunciones.js"></script>
 </head>
-<body>
+<body id="bodyBackground">
     <nav class="light-blue lighten-1" role="navigation">
         <div class="nav-wrapper container">
             <a id="logo-container" href="index.html" class="brand-logo center"><i class="material-icons">home</i>Inicio</a>
@@ -25,25 +25,25 @@
         <h1 id="mainTitulo">Calculo de Superficies</h1>
     </header>
     <section>
-    <div class="container">
-        <div class="row center">
-            <a href="triangulo.html" class="btn-large waves-effect waves-light orange">Triangulo</a>
-            <a href="cuadrado.html" class="btn-large waves-effect waves-light orange">Cuadrado</a>
+        <div class="container">
+                <div class="row center">
+                    <a href="triangulo.html" class="btn-large waves-effect waves-light orange">Triangulo</a>
+                    <a href="cuadrado.html" class="btn-large waves-effect waves-light orange">Cuadrado</a>
+                </div>
+                <div class="row center">
+                    <a href="circulo.html" class="btn-large waves-effect waves-light orange">Circulo</a>
+                    <a href="rectangulo.html" class="btn-large waves-effect waves-light orange">Rectangulo</a>
+                </div>
         </div>
-        <div class="row center">
-            <a href="circulo.html" class="btn-large waves-effect waves-light orange">Circulo</a>
-            <a href="rectangulo.html" class="btn-large waves-effect waves-light orange">Rectangulo</a>
-        </div>
-    </div>
     </section>
 <footer class="page-footer orange">
-        <div class="container">
-          <div class="row">
-            <div class="col l6 s12">
+        <div id="divGen" class="container">
+          <div id="divGen" class="row">
+            <div id="divGen" class="col l6 s12">
               <p class="grey-text text-lighten-4">Proyecto de Laboratorio de Computacion II de Matias Boldini</p>
               <p><a class="white-text" href="https://github.com/MatiasBoldini">MatÍas Boldini</a></p>
             </div>
-            <div class="col l3 s12">
+            <div id="divGen" class="col l3 s12">
               <h5 id="titFooter">Profesores</h5>
               <ul>
                 <li><a class="white-text" href="https://github.com/edme88">Agustina Edmé Aliciardi</a></li>
