--- a/Templates/css/style.css
+++ b/Templates/css/style.css
@@ -3,10 +3,7 @@
     color: #FF9100;
     text-align: center;
 }
-div{
-    margin: 10px;
-    padding: 5px 30px;
-}
+
 .card{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
@@ -47,4 +44,13 @@ canvas{
 }
 .parallax-container {
     height: 400px;
-  }  
+  }
+
+#bodyBackground {
+    background-image: url("../imagenes/depositphotos_227620074-stock-illustration-abstract-geometric-white-gray-color.jpg")
+}
+
+#divGen{
+    margin: 10px;
+    padding: 5px 30px;
+}
