--- a/Templates/main.html
+++ b/Templates/main.html
@@ -8,11 +8,11 @@
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!-- Compiled and minified JavaScript -->
-    <script type="text/javascript" src="js/misFunciones.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/misFunciones.js"></script>
     <title> Calculadora de Superficies</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
@@ -37,7 +37,7 @@
             </div>
             
             <div class="parallax">
-                <img src="fondoparallax.jpeg">
+                <img src="imagenes/fondoparallax.jpeg">
             </div>
         </div>
     </section>
