--- a/Templates/rectangulo.html
+++ b/Templates/rectangulo.html
@@ -4,19 +4,19 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" href="imagenes/iconpage.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/misFunciones.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title> Calculadora de Superficies</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-
-    <script src="main.js"></script>
+    <script type="text/javascript" src="js/misFunciones.js"></script>
 </head>
-<body>
+<body id="bodyBackground">
     <nav class="light-blue lighten-1" role="navigation">
         <div class="nav-wrapper container">
             <a id="logo-container" href="index.html" class="brand-logo center"><i class="material-icons">home</i>Inicio</a>
@@ -24,8 +24,8 @@
     </nav>
     <section>
     <header>
-            <h1 id="mainTitulo">Rectangulo</h1>
-        </header>
+        <h1 id="mainTitulo">Rectangulo</h1>
+    </header>
     <div>
         <h5 class="header center black-text">Formula: Base.Altura</h5>
     </div>
