--- a/Templates/trectangulo.html
+++ b/Templates/trectangulo.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" href="imagenes/iconpage.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!-- Compiled and minified JavaScript -->
@@ -13,9 +13,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="main.js"></script>
+    <script type="text/javascript" src="js/misFunciones.js"></script>
 </head>
-<body>
+<body id="bodyBackground">
     <nav class="light-blue lighten-1" role="navigation">
         <div class="nav-wrapper container">
             <a href="rectangulo.html" class="brand-logo"><i class="material-icons">arrow_back</i></a>
