Correccion del footer y renombre de archivo superficie

--- a/Templates/triangulo.html
+++ b/Templates/triangulo.html
@@ -18,6 +18,7 @@
 <body id="bodyBackground">
     <nav class="light-blue lighten-1" role="navigation">
         <div class="nav-wrapper container">
+                <a href="superficie.html" class="brand-logo left"><i class="material-icons">arrow_back</i></a>
             <a id="logo-container" href="index.html" class="brand-logo center"><i class="material-icons">home</i>Inicio</a>
         </div>
     </nav>
@@ -68,21 +69,21 @@
         </div>
     </section>
     <footer class="page-footer orange">
-        <div class="container">
-          <div class="row">
-            <div class="col l6 s12">
-              <p class="grey-text text-lighten-4">Proyecto de Laboratorio de Computacion II de Matias Boldini</p>
-              <p><a class="white-text" href="https://github.com/MatiasBoldini">MatÍas Boldini</a></p>
+            <div id="divGen" class="container">
+            <div id="divGen" class="row">
+                <div id="divGen" class="col l6 s12">
+                <p class="grey-text text-lighten-4">Proyecto de Laboratorio de Computacion II de Matias Boldini</p>
+                <p><a class="white-text" href="https://github.com/MatiasBoldini">MatÍas Boldini</a></p>
+                </div>
+                <div id="divGen" class="col l3 s12">
+                <h5 id="titFooter">Profesores</h5>
+                <ul>
+                    <li><a class="white-text" href="https://github.com/edme88">Agustina Edmé Aliciardi</a></li>
+                    <li><a class="white-text" href="https://github.com/rmarku">Martín Ricardo Marcucci</a></li>
+                </ul>
+                </div>
             </div>
-            <div class="col l3 s12">
-              <h5 id="titFooter">Profesores</h5>
-              <ul>
-                <li><a class="white-text" href="https://github.com/edme88">Agustina Edmé Aliciardi</a></li>
-                <li><a class="white-text" href="https://github.com/rmarku">Martín Ricardo Marcucci</a></li>
-              </ul>
             </div>
-          </div>
-        </div>
-      </footer>
+    </footer>
 </body>
 </html>
