--- a/Templates/index.html
+++ b/Templates/index.html
@@ -8,50 +8,55 @@
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!-- Compiled and minified JavaScript -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/misFunciones.js"></script>
     <title> Calculadora de Superficies</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script type="text/javascript" src="misFunciones.js"></script>
 </head>
-<body id="bodyBackground">
+<body>
     <nav class="light-blue lighten-1" role="navigation">
         <div class="nav-wrapper container">
             <a id="logo-container" href="index.html" class="brand-logo center"><i class="material-icons">home</i>Inicio</a>
         </div>
     </nav>
-    <header>
-        <h1 id="mainTitulo">Calculo de Superficies</h1>
-    </header>
     <section>
-        <div class="container">
-                <div class="row center">
-                    <a href="triangulo.html" class="btn-large waves-effect waves-light orange">Triangulo</a>
-                    <a href="cuadrado.html" class="btn-large waves-effect waves-light orange">Cuadrado</a>
+        <div class="parallax-container center valign-wrapper">
+            <div class="container">
+                <div class="row">
+                <div class="col s12 white-text">
+                    <h2 class="teal-text teal-text lighten-2">Calculadora de Superficies y Volumenes</h2>
+                    <p>Un programa diseñado para calcular la superficie y volumenes de distintas
+                        figuras geometricas.
+                    </p>
+                    <a href="superficie.html" class="waves-effect waves-light btn-large teal lighten-2">Superficies</a>
+                    <a href="" class="waves-effect waves-light btn-large teal lighten-2">Volúmenes</a>
                 </div>
-                <div class="row center">
-                    <a href="circulo.html" class="btn-large waves-effect waves-light orange">Circulo</a>
-                    <a href="rectangulo.html" class="btn-large waves-effect waves-light orange">Rectangulo</a>
                 </div>
+            </div>
+            
+            <div class="parallax">
+                <img src="imagenes/fondoparallax.jpeg">
+            </div>
         </div>
     </section>
-<footer class="page-footer orange">
-        <div id="divGen" class="container">
-          <div id="divGen" class="row">
-            <div id="divGen" class="col l6 s12">
-              <p class="grey-text text-lighten-4">Proyecto de Laboratorio de Computacion II de Matias Boldini</p>
-              <p><a class="white-text" href="https://github.com/MatiasBoldini">MatÍas Boldini</a></p>
+    <footer class="page-footer orange">
+            <div id="divGen" class="container">
+            <div id="divGen" class="row">
+                <div id="divGen" class="col l6 s12">
+                <p class="grey-text text-lighten-4">Proyecto de Laboratorio de Computacion II de Matias Boldini</p>
+                <p><a class="white-text" href="https://github.com/MatiasBoldini">MatÍas Boldini</a></p>
+                </div>
+                <div id="divGen" class="col l3 s12">
+                <h5 id="titFooter">Profesores</h5>
+                <ul>
+                    <li><a class="white-text" href="https://github.com/edme88">Agustina Edmé Aliciardi</a></li>
+                    <li><a class="white-text" href="https://github.com/rmarku">Martín Ricardo Marcucci</a></li>
+                </ul>
+                </div>
             </div>
-            <div id="divGen" class="col l3 s12">
-              <h5 id="titFooter">Profesores</h5>
-              <ul>
-                <li><a class="white-text" href="https://github.com/edme88">Agustina Edmé Aliciardi</a></li>
-                <li><a class="white-text" href="https://github.com/rmarku">Martín Ricardo Marcucci</a></li>
-              </ul>
             </div>
-          </div>
-        </div>
-      </footer>
+    </footer>
 </body>
 </html>
