--- a/Templates/ttriangulo.html
+++ b/Templates/ttriangulo.html
@@ -48,21 +48,21 @@
         </div>
     </section>
     <footer class="page-footer orange">
-        <div class="container">
-          <div class="row">
-            <div class="col l6 s12">
-              <p class="grey-text text-lighten-4">Proyecto de Laboratorio de Computacion II de Matias Boldini</p>
-              <p><a class="white-text" href="https://github.com/MatiasBoldini">MatÍas Boldini</a></p>
+        <div id="divGen" class="container">
+        <div id="divGen" class="row">
+            <div id="divGen" class="col l6 s12">
+            <p class="grey-text text-lighten-4">Proyecto de Laboratorio de Computacion II de Matias Boldini</p>
+            <p><a class="white-text" href="https://github.com/MatiasBoldini">MatÍas Boldini</a></p>
             </div>
-            <div class="col l3 s12">
-              <h5 class="white-text">Profesores</h5>
-              <ul>
+            <div id="divGen" class="col l3 s12">
+            <h5 id="titFooter">Profesores</h5>
+            <ul>
                 <li><a class="white-text" href="https://github.com/edme88">Agustina Edmé Aliciardi</a></li>
                 <li><a class="white-text" href="https://github.com/rmarku">Martín Ricardo Marcucci</a></li>
-              </ul>
+            </ul>
             </div>
-          </div>
         </div>
-      </footer>
+        </div>
+</footer>
 </body>
 </html>
