Se agrego el html volumen por completo

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -31,13 +31,9 @@
                         figuras geometricas.
                     </p>
                     <a href="superficie.html" class="waves-effect waves-light btn-large teal lighten-2">Superficies</a>
-                    <a href="" class="waves-effect waves-light btn-large teal lighten-2">Volúmenes</a>
+                    <a href="volumenes.html" class="waves-effect waves-light btn-large teal lighten-2">Volúmenes</a>
                 </div>
                 </div>
-            </div>
-            
-            <div class="parallax">
-                <img src="imagenes/fondoparallax.jpeg">
             </div>
         </div>
     </section>
