--- a/Templates/circulo.html
+++ b/Templates/circulo.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script type="text/javascript" src="js/misFunciones.js"></script>
 </head>
-<body id="bodyBackground">
+<body>
     <nav class="light-blue lighten-1" role="navigation">
         <div class="nav-wrapper container">
             <a href="superficie.html" class="brand-logo left"><i class="material-icons">arrow_back</i></a>
