--- a/Templates/css/style.css
+++ b/Templates/css/style.css
@@ -4,6 +4,11 @@
     text-align: center;
 }
 
+#tituloSecun{
+    color: #000000;
+    text-align: center;
+}
+
 .card{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
@@ -12,6 +17,14 @@
     left: 30%;
     padding: 16px;
 }
+
+.card-panel{
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    text-align: center;
+    padding: 16px;
+}
+
 img{
     height: 70vh;
     width: auto;
@@ -42,11 +55,8 @@ canvas{
     width: 200;
     height: 100;
 }
-.parallax-container {
-    height: 400px;
-  }
 
-#bodyBackground {
+body {
     background-image: url("../imagenes/depositphotos_227620074-stock-illustration-abstract-geometric-white-gray-color.jpg")
 }
 
