--- a/Templates/tcuadrado.html
+++ b/Templates/tcuadrado.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script type="text/javascript" src="js/misFunciones.js"></script>
 </head>
-<body id="bodyBackground">
+<body>
     <nav class="light-blue lighten-1" role="navigation">
         <div class="nav-wrapper container">
             <a href="cuadrado.html" class="brand-logo"><i class="material-icons">arrow_back</i></a>
