Se modificaron unos estilos de botones y se agrego breve definicion en superficie y volumen

--- a/Templates/superficie.html
+++ b/Templates/superficie.html
@@ -27,13 +27,30 @@
     <section>
         <div class="container">
                 <div class="row center">
-                    <a href="triangulo.html" class="btn-large waves-effect waves-light orange">Triangulo</a>
-                    <a href="cuadrado.html" class="btn-large waves-effect waves-light orange">Cuadrado</a>
+                    <a href="triangulo.html" class="waves-effect waves-light btn-large teal lighten-2">Triangulo</a>
+                    <a href="cuadrado.html" class="waves-effect waves-light btn-large teal lighten-2">Cuadrado</a>
                 </div>
                 <div class="row center">
-                    <a href="circulo.html" class="btn-large waves-effect waves-light orange">Circulo</a>
-                    <a href="rectangulo.html" class="btn-large waves-effect waves-light orange">Rectangulo</a>
+                    <a href="circulo.html" class="waves-effect waves-light btn-large teal lighten-2">Circulo</a>
+                    <a href="rectangulo.html" class="waves-effect waves-light btn-large teal lighten-2">Rectangulo</a>
                 </div>
+        </div>
+    </section>
+    <section>
+        <h3 id="tituloSecun"> ¿Que se entiende por Superficie?</h3>
+        <div class="row valign-wrapper">
+                <div class="col s6 offset-s3 valign">
+                <div class="card-panel teal">
+                <span class="white-text">
+                        La superficie es una magnitud y un atributo general a 
+                        todos los cuerpos que expresa los límites de la extensión de estos. La superficie
+                        demarca el fin de un cuerpo y el inicio de otro en dos dimensiones: en lo alto y en 
+                        lo ancho; puede decirse que la superficie es el límite que separa los cuerpos entre sí.
+                        En física la superficie puede entenderse como una región del espacio con características propias 
+                        también conocida como fase. La unidad de medida de la superficie es el metro cuadrado.
+                </span>
+                </div>
+            </div>
         </div>
     </section>
     <footer class="page-footer orange">
