--- a/Templates/index.html
+++ b/Templates/index.html
@@ -26,8 +26,8 @@
             <div class="container">
                 <div class="row">
                 <div class="col s12 white-text">
-                    <h2 class="teal-text teal-text lighten-2">Calculadora de Superficies y Volumenes</h2>
-                    <p>Un programa diseñado para calcular la superficie y volumenes de distintas
+                    <h1 id="mainTitulo">Calculadora de Superficies y Volumenes</h1>
+                    <p class="black-text">Un programa diseñado para calcular la superficie y volumenes de distintas
                         figuras geometricas.
                     </p>
                     <a href="superficie.html" class="waves-effect waves-light btn-large teal lighten-2">Superficies</a>
