--- a/Templates/volumenes.html
+++ b/Templates/volumenes.html
@@ -27,17 +27,17 @@
     <section>
         <div class="container">
                 <div class="row center">
-                    <a href="cubo.html" class="btn-large waves-effect waves-light orange">CUBO</a>
-                    <a href="cilindro.html" class="btn-large waves-effect waves-light orange">CILINDRO</a>
+                    <a href="cubo.html" class="waves-effect waves-light btn-large teal lighten-2">CUBO</a>
+                    <a href="cilindro.html" class="waves-effect waves-light btn-large teal lighten-2">CILINDRO</a>
                 </div>
                 <div class="row center">
-                    <a href="esfera.html" class="btn-large waves-effect waves-light orange">ESFERA</a>
-                    <a href="cono.html" class="btn-large waves-effect waves-light orange">CONO</a>
+                    <a href="esfera.html" class="waves-effect waves-light btn-large teal lighten-2">ESFERA</a>
+                    <a href="cono.html" class="waves-effect waves-light btn-large teal lighten-2">CONO</a>
                 </div>
         </div>
     </section>
     <section>
-        <h3 id="tituloSecun"> ¿Que se conoce como Volumen?</h3>
+        <h3 id="tituloSecun"> ¿Que se entiende por Volumen?</h3>
         <div class="row valign-wrapper">
                 <div class="col s6 offset-s3 valign">
                 <div class="card-panel teal">
