Leve correccion de la estructura del html~~

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -22,17 +22,25 @@
         </div>
     </nav>
     <section>
-        <div class="parallax-container center valign-wrapper">
-            <div class="container">
+            <div class="container center valign-wrapper">
                 <div class="row">
                 <div class="col s12 white-text">
                     <h1 id="mainTitulo">Calculadora de Superficies y Volumenes</h1>
-                    <p class="black-text">Un programa diseñado para calcular la superficie y volumenes de distintas
-                        figuras geometricas.
-                    </p>
                     <a href="superficie.html" class="waves-effect waves-light btn-large teal lighten-2">Superficies</a>
                     <a href="volumenes.html" class="waves-effect waves-light btn-large teal lighten-2">Volúmenes</a>
                 </div>
+                </div>
+            </div>
+    </section>
+    <section>
+        <h4 id="tituloSecun"> ¿Que se entiende por Volumen?</h4>
+        <div class="row valign-wrapper">
+                <div class="col s6 offset-s3 valign">
+                <div class="card-panel teal">
+                <span class="white-text">
+                    Un programa diseñado para calcular la superficie y volumenes de distintas
+                    figuras geometricas.
+                </span>
                 </div>
             </div>
         </div>
