Se agrego funcion js para superficie del cuadrado

--- a/Templates/cuadrado.html
+++ b/Templates/cuadrado.html
@@ -36,14 +36,14 @@
     <section>
         <div class="row center">
             <div class="input-field inline">
-                <input id="Valor_L" type="number" class="validate">
+                <input id="Valor_LCuadrado" type="number" class="validate">
                 <label >Lado</label>
                 Unidad en Metros
         </div>    
     </section>
     <section>
         <div class="row center">
-            <button class="btn waves-effect waves-light" type="submit" name="action">Calcular
+            <button class="btn waves-effect waves-light" type="submit" name="action" onclick="supCuad()">Calcular
                 <i class="material-icons right">send</i>
             </button>
         </div>
