--- a/Templates/index.html
+++ b/Templates/index.html
@@ -33,7 +33,7 @@
             </div>
     </section>
     <section>
-        <h4 id="tituloSecun"> ¿Que se entiende por Volumen?</h4>
+        <h4 id="tituloSecun"> ¿Que hace este programa Web?</h4>
         <div class="row valign-wrapper">
                 <div class="col s6 offset-s3 valign">
                 <div class="card-panel teal">
