Detalle en el index

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -54,6 +54,7 @@
                     <li>La superficie de distintas figuras geometricas.</li>
                     <li>El volumen de distintas figuras geometricas.</li>
                 </ul>
+                <p class="light">Ademas brinda una breve teoria de cada figura para entender mejor el calculo que se esta haciendo.</p>
               </div>
             </div>
             <div class="col s12 m4">
