Se crearon los html de la teoria de cilindro y cubo, ademas, se corrigio un error gral de los otros html

--- a/Templates/css/style.css
+++ b/Templates/css/style.css
@@ -31,6 +31,13 @@ img{
     margin: auto;
     display: block;
 }
+
+#imgCir{
+    width: 35%;
+    height: 35%; 
+    align-items: center;
+}
+
 main {
     flex: 1 0 auto;
   }
