--- a/Templates/index.html
+++ b/Templates/index.html
@@ -61,7 +61,7 @@
               <div class="icon-block">
                 <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
                 <h5 class="center">Sencillo de Usar</h5>
-                <p class="light">Se puso mucha concentracion en la experiencia de Usuario
+                <p class="light">Se puso mucho enfasis en la experiencia de Usuario
                     para que sea lo mas facil y dinamico de utilizar.
                 </p>
               </div>
