--- a/Templates/tcilindro.html
+++ b/Templates/tcilindro.html
@@ -18,33 +18,49 @@
 <body>
     <nav class="light-blue lighten-1" role="navigation">
         <div class="nav-wrapper container">
-            <a href="circulo.html" class="brand-logo"><i class="material-icons">arrow_back</i></a>
+            <a href="cilindro.html" class="brand-logo"><i class="material-icons">arrow_back</i></a>
             <a id="logo-container" href="index.html" class="brand-logo center"><i class="material-icons">home</i>Inicio</a>
         </div>
     </nav>
     <section>
         <div class="row center">
                 <header>
-                    <h1 id="mainTitulo">Teoria de los Circulos</h1>
+                    <h1 id="mainTitulo">Teoria de los Cilindros</h1>
                 </header>
         <div class="card center">
             <div class="card-image waves-effect waves-block waves-light">
-              <img id="imgCir" class="activator" src="imagenes/circulo.jpg">
+              <img id="imgCir" class="activator" src="imagenes/cilindro.jpg">
             </div>
             <div class="card-content">
-              <span class="card-title activator grey-text text-darken-4">El círculo es una región del plano delimitada por una circunferencia y, por tanto, tiene asociada un área.<i class="material-icons right">more_vert</i></span>
+              <span class="card-title activator grey-text text-darken-4">Cuerpo geométrico formado por una
+                superficie lateral curva y cerrada y dos planos paralelos que forman sus bases; 
+                en especial el cilindro circular.
+              <i class="material-icons right">more_vert</i></span>
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Definicion<i class="material-icons right">close</i></span>
-              <p>Un círculo es el lugar geométrico de los puntos del plano cuya distancia a otro punto fijo, llamado centro, es menor o igual que una cantidad constante, llamada radio.
-                A veces se utiliza indistintamente círculo por circunferencia siendo esta última su borde, es decir, la curva perimetral que lo determina y que solo posee longitud.</p>
+              <p>
+                <ul>  
+                    <li>En geometría, un cilindro es una superficie de las denominadas cuádricas formada por el desplazamie
+                        paralelo de una recta llamada generatriz a lo largo de una curva plana, denominada directriz.</li>
+                
+                    <li>Si la directriz es un círculo y la generatriz es perpendicular a él, entonces la superficie obtenida, 
+                        llamada cilindro circular recto, será de revolución y tendrá por lo tanto todos sus puntos situados a
+                        una distancia fija de una línea recta, el eje del cilindro. El sólido encerrado por esta superficie y 
+                        por dos planos perpendiculares al eje también es llamado cilindro. Este sólido es utilizado como una 
+                        superficie Gausiana.</li>
+
+                    <li>En geometría diferencial, un cilindro se define de forma general como cualquier superficie reglada 
+                        generada por una familia uniparamétrica de líneas paralelas.</li>
+                </ul>
+            </p>
             </div>
           </div>
         </div>
     </section>
     <section>
         <div class="row center">
-            <a href="https://es.wikipedia.org/wiki/C%C3%ADrculo#Terminolog%C3%ADa_frecuente" class="waves-effect waves-teal btn-flat">Terminología frecuente de los Circulos</a>
+            <a href="https://es.wikipedia.org/wiki/Cilindro#Clasificaci%C3%B3n" class="waves-effect waves-teal btn-flat">Clasificacion de los Cilindros</a>
         </div>
     </section>
     <footer class="page-footer orange">
