--- a/Templates/tcubo.html
+++ b/Templates/tcubo.html
@@ -18,33 +18,43 @@
 <body>
     <nav class="light-blue lighten-1" role="navigation">
         <div class="nav-wrapper container">
-            <a href="circulo.html" class="brand-logo"><i class="material-icons">arrow_back</i></a>
+            <a href="cubo.html" class="brand-logo"><i class="material-icons">arrow_back</i></a>
             <a id="logo-container" href="index.html" class="brand-logo center"><i class="material-icons">home</i>Inicio</a>
         </div>
     </nav>
     <section>
         <div class="row center">
                 <header>
-                    <h1 id="mainTitulo">Teoria de los Circulos</h1>
+                    <h1 id="mainTitulo">Teoria de los Cubos</h1>
                 </header>
         <div class="card center">
             <div class="card-image waves-effect waves-block waves-light">
-              <img id="imgCir" class="activator" src="imagenes/circulo.jpg">
+              <img id="imgCir" class="activator" src="imagenes/cubo.png">
             </div>
             <div class="card-content">
-              <span class="card-title activator grey-text text-darken-4">El círculo es una región del plano delimitada por una circunferencia y, por tanto, tiene asociada un área.<i class="material-icons right">more_vert</i></span>
+              <span class="card-title activator grey-text text-darken-4">
+                    En la geometría, un cubo es un cuerpo formado por seis caras que son cuadradas.
+              <i class="material-icons right">more_vert</i></span>
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Definicion<i class="material-icons right">close</i></span>
-              <p>Un círculo es el lugar geométrico de los puntos del plano cuya distancia a otro punto fijo, llamado centro, es menor o igual que una cantidad constante, llamada radio.
-                A veces se utiliza indistintamente círculo por circunferencia siendo esta última su borde, es decir, la curva perimetral que lo determina y que solo posee longitud.</p>
+              <p>
+                <ul>  
+                    <li>Cubo o hexaedro regular es un poliedro limitado por seis caras cuadradas congruentes. 
+                        Es uno de los denominados sólidos platónicos.</li>
+                    <li>Un cubo, además de ser un hexaedro, puede ser clasificado también como paralelepípedo,
+                        recto y rectangular, (brevemente ortoedro) pues todas sus caras son cuadrados y paralelos
+                        dos a dos. Incluso, se puede entender como un prisma recto, 
+                        cuya base es un cuadrado y su altura equivalente al lado de la base.</li>
+                </ul>
+            </p>
             </div>
           </div>
         </div>
     </section>
     <section>
         <div class="row center">
-            <a href="https://es.wikipedia.org/wiki/C%C3%ADrculo#Terminolog%C3%ADa_frecuente" class="waves-effect waves-teal btn-flat">Terminología frecuente de los Circulos</a>
+            <a href="https://es.wikipedia.org/wiki/Cubo#Elementos" class="waves-effect waves-teal btn-flat">Elementos, medidas y simetria de los Cubos</a>
         </div>
     </section>
     <footer class="page-footer orange">
