--- a/Templates/trectangulo.html
+++ b/Templates/trectangulo.html
@@ -29,7 +29,7 @@
                 </header>
         <div class="card center">
             <div class="card-image waves-effect waves-block waves-light">
-              <img class="activator" src="imagenes/rectangulo.jpg" style="width: 35%; height: 35%; align-items: center">
+              <img id="imgCir" class="activator" src="imagenes/rectangulo.jpg">
             </div>
             <div class="card-content">
               <span class="card-title activator grey-text text-darken-4">Rectángulo, con sus lados paralelos e iguales dos a dos y sus cuatro ángulos rectos<i class="material-icons right">more_vert</i></span>
