--- a/Templates/ttriangulo.html
+++ b/Templates/ttriangulo.html
@@ -29,7 +29,7 @@
                 </header>
         <div class="card center">
             <div class="card-image waves-effect waves-block waves-light">
-              <img class="activator" src="imagenes/triangulo.jpg" style="width: 35%; height: 35%; align-items: center">
+              <img id="imgCir" class="activator" src="imagenes/triangulo.jpg">
             </div>
             <div class="card-content">
               <span class="card-title activator grey-text text-darken-4">El triángulo es un polígono de tres lados y tres ángulos.<i class="material-icons right">more_vert</i></span>
