Se agrego teoria de cono y esfera, ademas, se modifico titulo de los htmls

--- a/Templates/circulo.html
+++ b/Templates/circulo.html
@@ -24,7 +24,7 @@
     </nav>
     <section>
     <header>
-            <h1 id="mainTitulo">Circulo</h1>
+            <h1 id="mainTitulo">CIRCULO</h1>
         </header>
     <div>
         <h5 class="header center black-text">Formula: Radio².π</h5>
