--- a/Templates/cuadrado.html
+++ b/Templates/cuadrado.html
@@ -24,7 +24,7 @@
     </nav>
     <section>
     <header>
-            <h1 id="mainTitulo">Cuadrado</h1>
+            <h1 id="mainTitulo">CUADRADO</h1>
         </header>
     <div>
         <h5 class="header center black-text">Formula: Lado . Lado</h5>
