--- a/Templates/rectangulo.html
+++ b/Templates/rectangulo.html
@@ -25,7 +25,7 @@
     </nav>
     <section>
     <header>
-        <h1 id="mainTitulo">Rectangulo</h1>
+        <h1 id="mainTitulo">RECTANGULO</h1>
     </header>
     <div>
         <h5 class="header center black-text">Formula: Base.Altura</h5>
