--- a/Templates/triangulo.html
+++ b/Templates/triangulo.html
@@ -24,7 +24,7 @@
     </nav>
     <section>
     <header>
-            <h1 id="mainTitulo">Triangulo</h1>
+            <h1 id="mainTitulo">TRIANGULO</h1>
         </header>
     <div>
         <h5 class="header center black-text">Formula: Base.Altura/2</h5>
