Leve correccion en nombres del html

--- a/Templates/circulo.html
+++ b/Templates/circulo.html
@@ -57,7 +57,7 @@
             <input id="SCirculoInput" class="validate"> Metros Cuadrados
         </div>
         <div>
-            <h6>Grafico del Triangulo</h6>
+            <h6>Grafico del Circulo</h6>
         </div>
         <canvas id="myCanvas">
         </canvas>
