--- a/Templates/rectangulo.html
+++ b/Templates/rectangulo.html
@@ -63,7 +63,7 @@
             <input id="SRectanguloInput" class="validate"> Metros Cuadrados
         </div>
         <div>
-            <h6>Grafico del Triangulo</h6>
+            <h6>Grafico del Rectangulo</h6>
         </div>
         <canvas id="myCanvas">
         </canvas>
