Correccion de ids univocos en el footer de la pagina

--- a/Templates/css/style.css
+++ b/Templates/css/style.css
@@ -71,6 +71,21 @@ body {
     padding: 5px 30px;
 }
 
+#divGen1{
+    margin: 10px;
+    padding: 5px 30px;
+}
+
+#divGen2{
+    margin: 10px;
+    padding: 5px 30px;
+}
+
+#divGen3{
+    margin: 10px;
+    padding: 5px 30px;
+}
+
 .icon-block {
     padding: 0 15px;
 }
