--- a/Templates/tcubo.html
+++ b/Templates/tcubo.html
@@ -59,12 +59,12 @@
     </section>
     <footer class="page-footer orange">
         <div id="divGen" class="container">
-            <div id="divGen" class="row">
-                <div id="divGen" class="col l6 s12">
+            <div id="divGen1" class="row">
+                <div id="divGen2" class="col l6 s12">
                     <p class="grey-text text-lighten-4">Proyecto de Laboratorio de Computacion II de Matias Boldini</p>
                     <p><a class="white-text" href="https://github.com/MatiasBoldini">MatÍas Boldini</a></p>
                 </div>
-                <div id="divGen" class="col l3 s12">
+                <div id="divGen3" class="col l3 s12">
                     <h5 id="titFooter">Profesores</h5>
                     <ul>
                         <li><a class="white-text" href="https://github.com/edme88">Agustina Edmé Aliciardi</a></li>
